--- a/css/style.css
+++ b/css/style.css
@@ -203,10 +203,12 @@ nav::after{
     background-color: white;
     /* border: 1px solid wheat; */
 }
+
 .row img{
     display: inline-block;
     width: 100%;
-    height: 100%;
+    height: 105%;
+    margin-top: -10px;
     object-fit: cover;
     /* object-position: center; */
 }
